Revert "fix: change blog post title color to white for better visibility"
This reverts commit f17970b6a80b3bbf85e8642149964cd51d167779.

--- a/css/style.scss
+++ b/css/style.scss
@@ -297,7 +297,7 @@ $grid-spacing: {{ site.data.settings.grid_settings.grid_spacing }}px;
 			border-color: $dark-border-color;
 
 			.blog-post__title a {
-				color: white;
+				color: $dark-text-dark-color;
 			}
 
 			.blog-post__subtitle {
